--- a/prepros.config
+++ b/prepros.config
@@ -916,6 +916,15 @@
         }
       }
     },
-    "files": []
+    "files": [
+      {
+        "file": "assets/css/wizard.css",
+        "config": {
+          "customOutput": "assets/css/wizard.min.css",
+          "autoCompile": true,
+          "sourceMap": true
+        }
+      }
+    ]
   }
 }
